# test-pytest-github-actions-annotate

./: README.md  pyproject.toml
.github/workflows/: ci.yml
buggy_module/: cli.py
